--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,15 +32,50 @@ body {
   display: flex;
 }
 
+.addmargin {
+      margin: 0 20vw;
+}
+
 .centre1-text {
   text-align: center;
 }
 
 
 
+/*
 img {
   max-width:300px;
   max-height:300px;
   width: auto;
   height: auto;
+}
+
+*/
+
+.container {
+  position: relative;
+  width: 27%; /* The size you want */
+}
+.container:after {
+  content: "";
+  display: block;
+  padding-bottom: 100%; /* The padding depends on the width, not on the height, so with a padding-bottom of 100% you will get a square */
+}
+
+.container img {
+  position: absolute; /* Take your picture out of the flow */
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0; /* Make the picture taking the size of it's parent */
+  width: 100%; /* This if for the object-fit */
+  height: 100%; /* This if for the object-fit */
+  object-fit: fill; /* Equivalent of the background-size: cover; of a background-image */
+  object-position: top;
+}
+
+img {
+  width:  15vw;
+  height: 15vw;
+  object-fit: fill;
 }
