--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,12 @@
   margin: 0;
   padding: 0;
   border: none;
-  text-align: center;
+
   margin: 0 auto;
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
 }
-
+/*text-align: center; */
 
 body {
   height: 100vh;
@@ -23,8 +23,38 @@ body {
   font-weight: 300;
 }
 
+/* Use flexbox for the main layout of the screen */
 .flex {
   display: flex;
+}
+
+/* Initial Form handling */
+
+.form-container {
+  margin: 1em 16vw;
+}
+
+.form-container-child {
+  /* Centre the form */
+  margin: 0 auto;
+}
+
+.show-form {
+    display:block;
+}
+
+input[type=submit],
+.rules-button {
+  padding: 5px 15px;
+  background: #99e0b2;
+  border: 0 none;
+  cursor: pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+}
+
+.rules-button {
+  margin-left: 32vw;
 }
 
 .column-centre-aligned {
@@ -34,29 +64,19 @@ body {
   gap:1em;
 }
 
+.show-game {
+  display:none;
+}
+
 .header-margin {
-  margin-top: 1em;
+  margin: 1em 0;
 }
 
 .side-margins {
       margin: 0 20vw;
 }
 
-.centre1-text {
-  text-align: center;
-}
-
-
-
-/*
-img {
-  max-width:300px;
-  max-height:300px;
-  width: auto;
-  height: auto;
-}
-
-*/
+/* This is how the image of each character will be shown */
 
 img {
   width:  22vw;
