after revisiting 'love maths' project structure this code accordingly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,8 @@ input[type=submit],
 }
 
 .rules-button {
-  margin-left: 32vw;
+  display: block;
+  text-align: center;
 }
 
 .column-centre-aligned {
