--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,13 +7,13 @@
   margin: 0;
   padding: 0;
   border: none;
-
   margin: 0 auto;
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
 }
-/*text-align: center; */
 
+
+/* DG1 */
 body {
   height: 100vh;
 }
@@ -31,7 +31,7 @@ body {
 /* Initial Form handling */
 
 .form-container {
-  margin: 1em 16vw;
+  display: flex;
 }
 
 .form-container-child {
@@ -46,10 +46,10 @@ body {
 input[type=submit],
 .rules-button {
   padding: 5px 15px;
-  background: #99e0b2;
+/* DG2 */
+background: #99e0b2;
   border: 0 none;
   cursor: pointer;
-  -webkit-border-radius: 5px;
   border-radius: 5px;
 }
 
@@ -69,8 +69,14 @@ input[type=submit],
   display:none;
 }
 
-.header-margin {
+.header-margin-forform {
   margin: 1em 0;
+  text-align: center;
+}
+
+.header-margin-forgame {
+  margin-top: 1em;
+  text-align: center;
 }
 
 .side-margins {
