Fix mathematical bug regarding wrong number order

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,8 +110,8 @@ img {
   object-position: top;
 }
 
-.invisible {
-  display: none;
+.hide-element {
+  visibility: hidden;
 }
 
 .display-message {
