--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,15 @@ body {
     display:block;
 }
 
+.playername-control {
+  border: 2px solid black;
+  padding: 10px;
+  border-radius: 4px;
+  box-sizing: border-box; 
+  margin: 1em 0;
+  text-transform: capitalize;
+}
+
 input[type=submit],
 .rules-button {
   padding: 5px 15px;
