--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ input[type=submit],
   left: 50%;
   margin-left: -50px;
   width: 100px;  
-  bottom: 80px;
+  top: 640px;
 }
 
 .column-centre-aligned {
@@ -167,6 +167,10 @@ img {
     width:  24vw;
     height: 24vw;
   }
+
+  .rules-button {
+    top: 600px;
+  }    
 }
 
 
@@ -200,10 +204,6 @@ img {
   h2 {
     font-size: 100%;
   }
-
-  .rules-button {
-    bottom: 120px;
-  }  
 }
 
 
