--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,22 +22,44 @@ body {
   display: flex;
 }
 
-.shape-button {
+/* Styled 'weapon-button' as shown in the example here:
+   https://www.w3schools.com/howto/howto_css_icon_buttons.asp 
+*/
+
+.weapon-button {
+  background-color: #05aa6d;
+  /* Remove borders */
+  border: none;
+  border-radius: 5px;
+  /* White text */
+  color: white;
+  /* Some padding */
+  padding: 5px 15px;
+  /* Set a font size */
+  font-size: 16px;
   cursor: pointer;
 }
 
 .yourmove {
   display: block;
   text-align: center;
-  margin-top: 1em;
+  margin-top: 4em;
 }
 
 .yourmove::after {
   content: "Your Move!";
-  background-color: #ffba10;
+  background-color: #2ba805;
+  color: #fff;
   text-transform: uppercase;
-  border-color: #fff;
-  border-style: dotted;
+  margin-top: 10px;
+
+/* Added a colour shadow to 'yourmove' by following the example shown here:
+   https://blog.hubspot.com/website/css-border regarding <p class="colorshadow">
+*/
+
+  border: 2px solid #fffa8a;
+  padding: 10px;
+  box-shadow: 6px 4px #fffa8a;  
 }
 
 /* Initial Form handling */
@@ -165,6 +187,8 @@ img {
   padding: 16px;
   /* lightgray */
   background-color: #d3d3d3;
+  font-family: "Times New Roman", Times, serif;
+  color: #000;
 }
 
 .centre-error-message h1,
