--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,6 @@ body {
   background-color: #2ba805;
   color: #fff;
   text-transform: uppercase;
-  margin-top: 10px;
 
 /* Added a colour shadow to 'yourmove' by following the example shown here:
    https://blog.hubspot.com/website/css-border regarding <p class="colorshadow">
@@ -60,6 +59,31 @@ body {
   border: 2px solid #fffa8a;
   padding: 10px;
   box-shadow: 6px 4px #fffa8a;  
+}
+
+/* .circle {
+  background: gold;
+  width: 40px; 
+  height: 40px;
+  border-radius: 50%;
+  display: flex; /* or inline-flex * /
+  align-items: center; 
+  justify-content: center;
+} */
+
+.circle {
+  background: #527a16;
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: sans-serif;
+  font-size: 27px;
+  color: black;
+  text-align: center;
+  margin-top: 4em;
 }
 
 /* Initial Form handling */
@@ -103,8 +127,9 @@ input[type=submit],
 .rules-button,
 .playagain-button {
   padding: 5px 15px;
-  /* DG2 */
-  background: #99e0b2;
+  background: #6725cc;
+  color: white;
+  font-size: 120%;
   border: 0 none;
   cursor: pointer;
   border-radius: 5px;
