--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,6 +393,8 @@ img {
 /*
 This excellent Orientation Lock is courtesy of Andreas Gotfredsen
 It was posted by Chris Coyier at https://css-tricks.com/snippets/css/orientation-lock/ 
+
+Cater for any height smaller than Nest Hub (1024 x 600)
 */
 
 @media screen and (max-height: 599px) and (orientation: landscape) {
